--- a/index.html
+++ b/index.html
@@ -225,18 +225,18 @@
         <i class="fa-sharp fa-regular fa-heart"></i>
         <ul class="con">
           <li>
-            <a href="https://www.facebook.com/dipesh.gyawali.5"
-              >Dipesh Gyawali</a
+            <a href="https://www.facebook.com/profile.php?id=100010375306336"
+              >Pawan Bhandari</a
             >
           </li>
           <li>
-            <a href="https://www.facebook.com/bhabuk.ghimire.18"
-              >Bhabuk Ghimire</a
+            <a href="https://www.facebook.com/adarsha.rimal"
+              >Adarsha Rimal</a
             >
           </li>
           <li>
-            <a href="https://www.facebook.com/lokendra.bhat.90"
-              >Lokendra Bhat</a
+            <a href="https://www.facebook.com/jatan.adhakari"
+              >Jatan Adhikari</a
             >
           </li>
         </ul>
