--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                     <p>
                         Thank you for this amazing service. This helps me a lot. I don't have to walk a long way to the Senior Allowance Office to collect my allowance now.
                     </p>
-                    <h3>Govind Basnet</h3>
+                    <h3>Tilak Kandel</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
                 </div>
             </div>
             <div class="testimonials-col">
@@ -189,12 +189,43 @@
                     <p>
                         I am very thankful to the Nepal government for the great improvement in IT implementation, which has helped us immensely. Thanks to the developers and Nepal.
                     </p>
-                    <h3>Harimaya Devi</h3>
+                    <h3>Raghunath Sharma</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star-half-stroke"></i>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="testimonials-col">
+                <img src="images/elder3.jpg" />
+                <div>
+                    <p>
+                        I use to not get my money because my son would take it, now I can easily get it myself without any problem.
+                    </p>
+                    <h3>Suprim Ghimire</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+
+                </div>
+            </div>
+            <div class="testimonials-col">
+                <img src="images/elder4.jpg" />
+                <div>
+                    <p>
+                        Previously, I would have to walk for 2 hours to get my money, Now I can get it without leaving home. Thankyou Technology!
+                    </p> 
+                    <h3>Sagar Gautam</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
             </div>
         </div>
